add receiver name

--- a/public/index.html
+++ b/public/index.html
@@ -33,28 +33,33 @@
                       Selecione uma opção.
                     </div>
                     <!-- Segunda página -->
-                    <label for='nameInput' id='nameLabel' class='mt-2'>Informe seu nome completo</label>
+                    <label for='nameInput' id='nameLabel' class='mt-2'>Seu nome completo</label>
                     <input class='form-control form-control-sm mt-2' id='name' type='text' placeholder='Seu nome completo' aria-label='nameInput' required>
                     <div id='errorMessageName' class='invalid-feedback'>
                       Por favor, informe seu nome.
                     </div>
-                    <label for='emailInput' id='emailLabel' class='mt-2'>Informe seu email</label>
+                    <label for='emailInput' id='emailLabel' class='mt-2'>Seu email</label>
                     <input class='form-control form-control-sm mt-2' id='email' type='email' placeholder='Seu email' aria-label='emailInput' required>
                     <div id='errorMessageEmail' class='invalid-feedback'>
                       Por favor, informe seu email.
                     </div>
-                    <label for='phoneInput' id='phoneLabel' class='mt-2'>Informe seu número</label>
+                    <label for='phoneInput' id='phoneLabel' class='mt-2'>Seu número</label>
                     <input class='form-control form-control-sm mt-2' type='tel' id='phone' name='phoneInput' placeholder='(xx)999999999' required>
                     <div id='errorMessagePhone' class='invalid-feedback'>
                       Por favor, informe seu número.
                     </div>
                     <!-- Terceira página -->
-                    <label for='emailInputReceiver' id='emailReceiverLabel' class='mt-2'>Informe o email de quem irá retirar</label>
+                    <label for='nameInputReceiver' id='nameReceiverLabel' class='mt-2'>Nome de quem irá retirar</label>
+                    <input class='form-control form-control-sm mt-2' id='nameReceiver' type='text' placeholder='Nome' aria-label='nameInputReceiver' required>
+                    <div id='errorMessageNameReceiver' class='invalid-feedback'>
+                      Por favor, informe um nome.
+                    </div>
+                    <label for='emailInputReceiver' id='emailReceiverLabel' class='mt-2'>Email de quem irá retirar</label>
                     <input class='form-control form-control-sm mt-2' id='emailReceiver' type='email' placeholder='Email' aria-label='emailInputReceiver' required>
                     <div id='errorMessageEmailReceiver' class='invalid-feedback'>
                       Por favor, informe um email.
                     </div>
-                    <label for='phoneInputReceiver' id='phoneReceiverLabel' class='mt-2'>Informe seu número</label>
+                    <label for='phoneInputReceiver' id='phoneReceiverLabel' class='mt-2'>Número de quem irá retirar</label>
                     <input class='form-control form-control-sm mt-2' type='tel' id='phoneReceiver' name='phoneInputReceiver' placeholder='(xx)999999999' required>
                     <div id='errorMessagePhoneReceiver' class='invalid-feedback'>
                       Por favor, informe um número.
